--- a/medhelper/src/components/.env
+++ b/medhelper/src/components/.env
@@ -1,4 +1,4 @@
-DB_HOST=localhost
-DB_USER=your_username
-DB_PASSWORD=your_password
-DB_NAME=your_database
+DB_HOST=mysql2.kkak.dreamhosters.com
+DB_USER=kkakdreamhosters
+DB_PASSWORD=bQhM^TSZ
+DB_NAME=medication2
