--- a/medhelper/package.json
+++ b/medhelper/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jose": "^4.14.0",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
