--- a/medhelper/package.json
+++ b/medhelper/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.5",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jose": "^4.14.0",
