--- a/medhelper/package.json
+++ b/medhelper/package.json
@@ -14,7 +14,7 @@
     "express": "^4.18.2",
     "jose": "^4.14.0",
     "jsonwebtoken": "^9.0.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
