--- a/medhelper/.gitignore
+++ b/medhelper/.gitignore
@@ -21,3 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# new exlusions
+/src/components/Firebase.js
+/src/components/Server.js
+/src/components/Mysql.js
+/src/components/SQL.txt
