--- a/medhelper/.gitignore
+++ b/medhelper/.gitignore
@@ -27,4 +27,4 @@ yarn-error.log*
 /src/components/Server.js
 /src/components/Mysql.js
 /src/components/SQL.txt
-/src/components/.env
+/medhelper/.env
