--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: List directory contents
+        run: ls -la
       - run: npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
