--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -11,7 +11,14 @@ jobs:
       - uses: actions/checkout@v4
       - name: List directory contents
         run: ls -la
-      - run: npm run build
+      # Change to the directory containing package.json before building
+      - name: Change to app directory
+        run: cd medhelper
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      # Deploy to Firebase preview channel
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
