--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,8 +15,10 @@ jobs:
         run: ls -la
       - name: Install dependencies
         run: npm install
+        working-directory: ./MedHelper/MedHelper/medhelper
       - name: Build
         run: npm run build
+        working-directory: ./MedHelper/MedHelper/medhelper
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
