--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,10 +13,10 @@ jobs:
         run: ls -la
       - name: Install dependencies
         run: npm install
-        working-directory: ./MedHelper/MedHelper/medhelper
+        working-directory: ./medhelper
       - name: Build
         run: npm run build
-        working-directory: ./MedHelper/MedHelper/medhelper
+        working-directory: .medhelper
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
