--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -17,9 +17,13 @@ jobs:
       - name: Build
         run: npm run build
         working-directory: ./medhelper
+      - name: Move build directory to root (if necessary)
+        run: mv ./medhelper/build ./build
+        working-directory: ${{ github.workspace }}
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MEDAPP2_226B0 }}'
           projectId: medapp2-226b0
-          entryPoint: ./medhelper
+
