--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,13 +19,10 @@ jobs:
       - name: Build
         run: npm run build
         working-directory: ./medhelper
-      - name: Move build directory to root (if necessary)
-        run: mv ./medhelper/build ./build
-        working-directory: ${{ github.workspace }}
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_MEDAPP2_226B0 }}'
           channelId: live
           projectId: medapp2-226b0
-
+          entryPoint: ./medhelper
